Model and config fixes.

--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-crew-01.cfg
@@ -99,25 +99,39 @@ PART
 		{
 			name = BlackHandles
 			title = #LOC_NFConstruction_switcher_endcaps_black_handles
-		transform = 25mCapBlack
+			transform = 25mCapBlack
+			descriptionSummary = #LOC_NFConstruction_switcher_endcaps_black_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcaps_black_detail
+      primaryColor = #000000
+      secondaryColor = #999999
 		}
 		SUBTYPE
 		{
 			name = WhiteHandles
 			title = #LOC_NFConstruction_switcher_endcaps_white_handles
       transform = 25mCapWhite
+      descriptionSummary = #LOC_NFConstruction_switcher_endcaps_black_handles_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcaps_black_handles_detail
+      primaryColor = #ffffff
+      secondaryColor = #999999
 		}
 		SUBTYPE
 		{
 			name = Black
 			title = #LOC_NFConstruction_switcher_endcaps_black
       transform = 25mCapBlackBare
+      descriptionSummary = #LOC_NFConstruction_switcher_endcaps_white_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcaps_white_detail
+      primaryColor = #000000
 		}
 		SUBTYPE
 		{
 			name = White
 			title = #LOC_NFConstruction_switcher_endcaps_white
-		transform = 25mCapWhiteBare
+			transform = 25mCapWhiteBare
+			descriptionSummary = #LOC_NFConstruction_switcher_endcaps_white_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcaps_white_hollow_detail
+      primaryColor = #ffffff
 		}
 	}
 }
