--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
@@ -55,6 +55,8 @@ PART
 			title= #LOC_NFConstruction_switcher_attach_variant1
 			transform = OctoAttach
 			transform = COLLISION
+			descriptionSummary = #LOC_NFConstruction_switcher_attach_angled_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_attach_angled_detail
 
 		}
 
@@ -66,6 +68,8 @@ PART
 			transform = COLLISION
 			addedCost = -75
 			addedMass = -0.01
+			descriptionSummary = #LOC_NFConstruction_switcher_attach_angled_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_attach_angled_hollow_detail
 		}
 		SUBTYPE
 		{
@@ -73,6 +77,8 @@ PART
 			title= #LOC_NFConstruction_switcher_attach_variant3
 			transform = OctoAttachAlt
 			transform = COLLISIONALT
+			descriptionSummary = #LOC_NFConstruction_switcher_attach_ortho_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_attach_ortho_detail
 		}
 
 		SUBTYPE
@@ -83,6 +89,8 @@ PART
 			transform = COLLISIONALT
 			addedCost = -75
 			addedMass = -0.01
+			descriptionSummary = #LOC_NFConstruction_switcher_attach_ortho_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_attach_ortho_hollow_detail
 		}
 	}
 }
