--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-drone-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-drone-01.cfg
@@ -17,7 +17,8 @@ PART
 
 	node_stack_top = 0.0, 0.3020179, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -0.2430737, 0.0, 0.0, -1.0, 0.0, 2
-
+	node_attach = 0.0, -0.2430737, 0.0, 0.0, -1.0, 0.0, 2
+	
 	TechRequired = largeUnmanned
 	entryCost = 8900
 	cost = 4500
