--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-01.cfg
@@ -19,7 +19,8 @@ PART
 	node_stack_top02 = 0.0, 0.899, 0.4018, 0.0, 0.5, 0.5, 2
 	node_stack_top03 = 0.0, 0.665, 0.197, 0.0, 0.86602540378, 0.5, 2
 	node_stack_bottom = 0.0, -0.07155213, 0.0, 0.0, -1.0, 0.0, 2
-
+	node_attach = 0.0, -0.07155213, 0.0, 0.0, -1.0, 0.0, 2
+	
 	bulkheadProfiles = octotruss, srf
 
 	TechRequired = nanolathing
@@ -56,8 +57,7 @@ PART
 			name = 90 Degrees
 			title= #LOC_NFConstruction_switcher_angle_variant1
 			node = top01
-			transform = Truss90A
-			transform = Truss90B
+			transform = Angled90
       descriptionSummary = #LOC_NFConstruction_switcher_angle_90_summary
       descriptionDetail = #LOC_NFConstruction_switcher_angle_90_detail
 		}
@@ -67,9 +67,7 @@ PART
 			name = 45 Degrees
 			title= #LOC_NFConstruction_switcher_angle_variant2
 			node = top02
-			transform = Truss45A
-			transform = Truss45B
-			transform = COLLISION45D
+			transform = Angled45
 			addedCost = -250
 			addedMass = -0.125
       descriptionSummary = #LOC_NFConstruction_switcher_angle_45_summary
@@ -80,9 +78,7 @@ PART
 			name = 30 Degrees
 			title= #LOC_NFConstruction_switcher_angle_variant3
 			node = top03
-			transform = Truss30A
-			transform = Truss30B
-			transform = COLLISION30D
+			transform = Angled30
 			addedCost = -350
 			addedMass = -0.17
       descriptionSummary = #LOC_NFConstruction_switcher_angle_30_summary
