--- a/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
@@ -1,7 +1,7 @@
 // Activates the CRP trusses and the CryoTanks boiloff when the appropriate mods are installed
 
 // Octo-truss XL
-@PART[truss-octo-01]:NEEDS[CommunityResourcePack]
+@PART[truss-octo-01]:NEEDS[CommunityResourcePack]:FOR[NearFutureConstruction]
 {
   !MODULE[ModuleB9DisableTransform] {}
 
@@ -75,7 +75,7 @@
 }
 
 // Octo-truss
-@PART[truss-octo-02]:NEEDS[CommunityResourcePack]
+@PART[truss-octo-02]:NEEDS[CommunityResourcePack]:FOR[NearFutureConstruction]
 {
   !MODULE[ModuleB9DisableTransform] {}
   @MODULE[ModuleB9PartSwitch]
@@ -148,7 +148,7 @@
 }
 
 // Hex Truss XL
-@PART[truss-hex-01]:NEEDS[CommunityResourcePack]
+@PART[truss-hex-01]:NEEDS[CommunityResourcePack]:FOR[NearFutureConstruction]
 {
   !MODULE[ModuleB9DisableTransform] {}
   @MODULE[ModuleB9PartSwitch]
@@ -222,7 +222,7 @@
 }
 
 // Hex Truss
-@PART[truss-hex-02]:NEEDS[CommunityResourcePack]
+@PART[truss-hex-02]:NEEDS[CommunityResourcePack]:FOR[NearFutureConstruction]
 {
   !MODULE[ModuleB9DisableTransform] {}
   @MODULE[ModuleB9PartSwitch]
