--- a/GameData/NearFutureConstruction/Patches/NFConstructionCommunityTechTree.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionCommunityTechTree.cfg
@@ -3,71 +3,71 @@
 // Adapters
 
 // Hubs and fancy connectors in exoticAlloys
-@PART[truss-octo-hub-01]:NEEDS[CommunityTechTree]
+@PART[truss-octo-hub-01]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = exoticAlloys
 }
-@PART[truss-octo-hub-crew-01]:NEEDS[CommunityTechTree]
+@PART[truss-octo-hub-crew-01]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = exoticAlloys
 }
-@PART[truss-octo-attach-01]:NEEDS[CommunityTechTree]
+@PART[truss-octo-attach-01]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = exoticAlloys
 }
-@PART[truss-octo-angled-01]:NEEDS[CommunityTechTree]
+@PART[truss-octo-angled-01]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = exoticAlloys
 }
-@PART[truss-octo-angled-crew-01]:NEEDS[CommunityTechTree]
+@PART[truss-octo-angled-crew-01]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = exoticAlloys
 }
 
 // Big trusses in exoticAlloys (not the standard size)
-@PART[truss-circular-01]:NEEDS[CommunityTechTree]
+@PART[truss-circular-01]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = exoticAlloys
 }
-@PART[truss-circular-03]:NEEDS[CommunityTechTree]
+@PART[truss-circular-03]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = exoticAlloys
 }
-@PART[truss-circular-04]:NEEDS[CommunityTechTree]
+@PART[truss-circular-04]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = exoticAlloys
 }
-@PART[truss-spinal-01]:NEEDS[CommunityTechTree]
+@PART[truss-spinal-01]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = exoticAlloys
 }
-@PART[truss-spinal-03]:NEEDS[CommunityTechTree]
+@PART[truss-spinal-03]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = exoticAlloys
 }
-@PART[truss-spinal-04]:NEEDS[CommunityTechTree]
+@PART[truss-spinal-04]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = exoticAlloys
 }
 
 // Heavy docking ports in Orbital Assembly
-@PART[truss-octo-docking-125]:NEEDS[CommunityTechTree]
+@PART[truss-octo-docking-125]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = orbitalAssembly
 }
-@PART[truss-octo-docking-25]:NEEDS[CommunityTechTree]
+@PART[truss-octo-docking-25]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = orbitalAssembly
 }
-@PART[truss-octo-docking-octo]:NEEDS[CommunityTechTree]
+@PART[truss-octo-docking-octo]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = orbitalAssembly
 }
-@PART[truss-spinal-docking-01]:NEEDS[CommunityTechTree]
+@PART[truss-spinal-docking-01]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = orbitalMegastructures
 }
-@PART[truss-circular-docking-01]:NEEDS[CommunityTechTree]
+@PART[truss-circular-docking-01]:NEEDS[CommunityTechTree]:FOR[NearFutureConstruction]
 {
 	@TechRequired = orbitalMegastructures
 }
