--- a/GameData/NearFutureConstruction/Patches/NFConstructionConnectedLivingSpaces.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionConnectedLivingSpaces.cfg
@@ -1,6 +1,6 @@
 // CLS Compatability for Near Future Construction v0.6.0
 
-@PART[truss-octo-drone-01]:NEEDS[ConnectedLivingSpace]:HAS[!MODULE[ModuleConnectedLivingSpace]]
+@PART[truss-octo-drone-01]:NEEDS[ConnectedLivingSpace]:FOR[NearFutureConstruction]:HAS[!MODULE[ModuleConnectedLivingSpace]]
 {
     MODULE
 	{
@@ -10,7 +10,7 @@
 }
 
 // Girders
-@PART[truss-octo-crew-01]:NEEDS[ConnectedLivingSpace]:HAS[!MODULE[ModuleConnectedLivingSpace]]
+@PART[truss-octo-crew-01]:NEEDS[ConnectedLivingSpace]:FOR[NearFutureConstruction]:HAS[!MODULE[ModuleConnectedLivingSpace]]
 {
     MODULE
 	{
@@ -18,7 +18,7 @@
 		passable = true
 	}
 }
-@PART[truss-octo-crew-02]:NEEDS[ConnectedLivingSpace]:HAS[!MODULE[ModuleConnectedLivingSpace]]
+@PART[truss-octo-crew-02]:NEEDS[ConnectedLivingSpace]:FOR[NearFutureConstruction]:HAS[!MODULE[ModuleConnectedLivingSpace]]
 {
     MODULE
 	{
@@ -26,7 +26,7 @@
 		passable = true
 	}
 }
-@PART[truss-octo-crew-03]:NEEDS[ConnectedLivingSpace]:HAS[!MODULE[ModuleConnectedLivingSpace]]
+@PART[truss-octo-crew-03]:NEEDS[ConnectedLivingSpace]:FOR[NearFutureConstruction]:HAS[!MODULE[ModuleConnectedLivingSpace]]
 {
     MODULE
 	{
@@ -34,7 +34,7 @@
 		passable = true
 	}
 }
-@PART[truss-octo-hub-crew-01]:NEEDS[ConnectedLivingSpace]:HAS[!MODULE[ModuleConnectedLivingSpace]]
+@PART[truss-octo-hub-crew-01]:NEEDS[ConnectedLivingSpace]:FOR[NearFutureConstruction]:HAS[!MODULE[ModuleConnectedLivingSpace]]
 {
     MODULE
 	{
@@ -42,7 +42,7 @@
 		passable = true
 	}
 }
-@PART[truss-octo-adapter-crew-01]:NEEDS[ConnectedLivingSpace]:HAS[!MODULE[ModuleConnectedLivingSpace]]
+@PART[truss-octo-adapter-crew-01]:NEEDS[ConnectedLivingSpace]:FOR[NearFutureConstruction]:HAS[!MODULE[ModuleConnectedLivingSpace]]
 {
     MODULE
 	{
@@ -50,7 +50,7 @@
 		passable = true
 	}
 }
-@PART[truss-octo-docking-125]:NEEDS[ConnectedLivingSpace]:HAS[!MODULE[ModuleConnectedLivingSpace]]
+@PART[truss-octo-docking-125]:NEEDS[ConnectedLivingSpace]:FOR[NearFutureConstruction]:HAS[!MODULE[ModuleConnectedLivingSpace]]
 {
     MODULE
 	{
@@ -58,7 +58,7 @@
 		passable = true
 	}
 }
-@PART[truss-octo-docking-octo]:NEEDS[ConnectedLivingSpace]:HAS[!MODULE[ModuleConnectedLivingSpace]]
+@PART[truss-octo-docking-octo]:NEEDS[ConnectedLivingSpace]:FOR[NearFutureConstruction]:HAS[!MODULE[ModuleConnectedLivingSpace]]
 {
     MODULE
 	{
@@ -66,7 +66,7 @@
 		passable = true
 	}
 }
-@PART[truss-octo-angled-crew-01]:NEEDS[ConnectedLivingSpace]:HAS[!MODULE[ModuleConnectedLivingSpace]]
+@PART[truss-octo-angled-crew-01]:NEEDS[ConnectedLivingSpace]:FOR[NearFutureConstruction]:HAS[!MODULE[ModuleConnectedLivingSpace]]
 {
     MODULE
 	{
