--- a/GameData/NearFutureConstruction/Patches/NFConstructionFuelTankTypes.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionFuelTankTypes.cfg
@@ -1,5 +1,5 @@
 // Adds support for CRP fuels when CRP is installed
-B9_TANK_TYPE:NEEDS[CommunityResourcePack&!CryoTanks]
+B9_TANK_TYPE:NEEDS[CommunityResourcePack&!CryoTanks]:FOR[NearFutureConstruction]
 {
 	name = LH2OCryo
 	tankMass = 0.000278904
@@ -16,7 +16,7 @@ B9_TANK_TYPE:NEEDS[CommunityResourcePack&!CryoTanks]
 		unitsPerVolume = 0.333
 	}
 }
-B9_TANK_TYPE:NEEDS[CommunityResourcePack&!CryoTanks]
+B9_TANK_TYPE:NEEDS[CommunityResourcePack&!CryoTanks]:FOR[NearFutureConstruction]
 {
 	name = LH2Cryo
 	tankMass =  0.00010627500
@@ -28,7 +28,7 @@ B9_TANK_TYPE:NEEDS[CommunityResourcePack&!CryoTanks]
 		unitsPerVolume = 7.5
 	}
 }
-B9_TANK_TYPE:NEEDS[CommunityResourcePack]
+B9_TANK_TYPE:NEEDS[CommunityResourcePack]:FOR[NearFutureConstruction]
 {
 	name = Lithium
 	tankMass = 0.00089
@@ -40,7 +40,7 @@ B9_TANK_TYPE:NEEDS[CommunityResourcePack]
 		unitsPerVolume = 5
 	}
 }
-B9_TANK_TYPE:NEEDS[CommunityResourcePack]
+B9_TANK_TYPE:NEEDS[CommunityResourcePack]:FOR[NearFutureConstruction]
 {
 	name = Argon
 	tankMass =  0.000594667
@@ -103,7 +103,7 @@ B9_TANK_TYPE
 	}
 }
 
-@B9_TANK_TYPE[Xenon]:NEEDS[NearFuturePropulsion]
+@B9_TANK_TYPE[Xenon]:NEEDS[NearFuturePropulsion]:FOR[NearFutureConstruction]
 {
 	@tankMass = 0.000525
 }
