--- a/GameData/NearFutureConstruction/Localization/zh-cn.cfg
+++ b/GameData/NearFutureConstruction/Localization/zh-cn.cfg
@@ -6,6 +6,7 @@ Localization
     // CONFIG
     // MANUFACTURERS
     #LOC_NFConstruction_manufacturer_gigabloks_title = 吉宝拼装玩具
+    #LOC_NFConstruction_manufacturer_clampdepot_title = 夹具舱
 
     // SWITCHERS
     #LOC_NFConstruction_switcher_subtype_title = 子类型
@@ -23,11 +24,37 @@ Localization
     #LOC_NFConstruction_switcher_subtype_variant_fuel_Ar = 氩气
     #LOC_NFConstruction_switcher_subtype_variant_fuel_Li = 锂
     #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore = 矿石
-    #LOC_NFConstruction_switcher_subtype_variant_fuel_Service = 支援
+    #LOC_NFConstruction_switcher_subtype_variant_fuel_Service = 货物
+
+    #LOC_NFConstruction_switcher_subtype_variant_LFO_detail = 液体燃料和氧化剂一体化储存燃料箱
+    #LOC_NFConstruction_switcher_subtype_variant_LFO_summary = 液体燃料/氧化剂燃料箱
+    #LOC_NFConstruction_switcher_subtype_variant_LF_detail = 带液体燃料储存的集成燃料箱
+    #LOC_NFConstruction_switcher_subtype_variant_LF_summary = 液体燃料箱
+    #LOC_NFConstruction_switcher_subtype_variant_O_detail = 一体化氧化剂燃料箱
+    #LOC_NFConstruction_switcher_subtype_variant_O_summary = 氧化剂
+    #LOC_NFConstruction_switcher_subtype_variant_LH2_detail = 集成液态氢储存燃料罐
+    #LOC_NFConstruction_switcher_subtype_variant_LH2_summary = 液氢燃料箱
+    #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail = 一体化液氢/氧化剂燃料箱
+    #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary = 液氢/氧化剂
+    #LOC_NFConstruction_switcher_subtype_variant_Xe_detail = 集成氙气储罐
+    #LOC_NFConstruction_switcher_subtype_variant_Xe_summary = 氙气罐
+    #LOC_NFConstruction_switcher_subtype_variant_Ar_detail = 氩气储存罐
+    #LOC_NFConstruction_switcher_subtype_variant_Ar_summary = 氩罐
+    #LOC_NFConstruction_switcher_subtype_variant_Li_detail = 集成锂储存罐
+    #LOC_NFConstruction_switcher_subtype_variant_Li_summary = 锂罐
+    #LOC_NFConstruction_switcher_subtype_variant_Ore_detail = 集成矿物储存罐
+    #LOC_NFConstruction_switcher_subtype_variant_Ore_summary = 矿箱
+    #LOC_NFConstruction_switcher_subtype_variant_Service_detail = 集成电力与单组元推进剂
+    #LOC_NFConstruction_switcher_subtype_variant_Service_summary = 飞行支援设备
 
     #LOC_NFConstruction_switcher_core_title = 内桁架
     #LOC_NFConstruction_switcher_core_variant1 = 无
     #LOC_NFConstruction_switcher_core_variant2 = 有
+    #LOC_NFConstruction_switcher_core_none_summary = 无核心段
+    #LOC_NFConstruction_switcher_core_none_detail = 桁架无中心芯
+    #LOC_NFConstruction_switcher_core_solid_summary = 核心部分
+    #LOC_NFConstruction_switcher_core_solid_detail = 桁架有一个实心中心
+
 
     #LOC_NFConstruction_switcher_truss_title = 桁架
     #LOC_NFConstruction_switcher_truss_variant1 = 完整
@@ -35,6 +62,29 @@ Localization
     #LOC_NFConstruction_switcher_truss_variant3 = 鞍式
     #LOC_NFConstruction_switcher_truss_variant4 = 双侧
     #LOC_NFConstruction_switcher_truss_variant5 = 仅框架
+    #LOC_NFConstruction_switcher_truss_solid_detail = 不能在其内部安装部件的实心桁架
+    #LOC_NFConstruction_switcher_truss_solid_summary = 坚固的实心桁架
+    #LOC_NFConstruction_switcher_truss_hollow_detail = 中心为空的桁架
+    #LOC_NFConstruction_switcher_truss_hollow_summary = 中空桁架
+    #LOC_NFConstruction_switcher_truss_saddle_detail = 中间为空的桁架，一侧有开口
+    #LOC_NFConstruction_switcher_truss_saddle_summary = 鞍式桁架
+    #LOC_NFConstruction_switcher_truss_open_detail = 中空、四面敞开的桁架
+    #LOC_NFConstruction_switcher_truss_open_summary = 开放式桁架
+    #LOC_NFConstruction_switcher_truss_dual_detail = 中空的桁架，两边都有开口
+    #LOC_NFConstruction_switcher_truss_dual_summary =  双桁架
+    #LOC_NFConstruction_switcher_truss_frame_detail = 中空、四面开放的极小桁架
+    #LOC_NFConstruction_switcher_truss_frame_summary =  桁架式框架
+
+    #LOC_NFConstruction_switcher_profile_title = 概述
+    #LOC_NFConstruction_switcher_profile_square = 方形
+    #LOC_NFConstruction_switcher_profile_triangular = 三角
+    #LOC_NFConstruction_switcher_profile_planar = 平面
+    #LOC_NFConstruction_switcher_profile_planar_detail = 简单的平桁架剖面
+    #LOC_NFConstruction_switcher_profile_planar_summary = 平截面
+    #LOC_NFConstruction_switcher_profile_triangular_detail = 三角形桁架剖面
+    #LOC_NFConstruction_switcher_profile_triangular_summary = 三角形截面
+    #LOC_NFConstruction_switcher_profile_square_detail = 方形桁架剖面
+    #LOC_NFConstruction_switcher_profile_square_summary = 方形截面
 
     #LOC_NFConstruction_switcher_endcap_title1 = 上盖
     #LOC_NFConstruction_switcher_endcap_title2 = 底盖
@@ -42,26 +92,76 @@ Localization
     #LOC_NFConstruction_switcher_endcap_variant2 = 完整
     #LOC_NFConstruction_switcher_endcap_variant3 = 无
 
+    #LOC_NFConstruction_switcher_endcap_basic_detail = 基本的盖
+    #LOC_NFConstruction_switcher_endcap_basic_summary = 标准的盖
+    #LOC_NFConstruction_switcher_endcap_solid_detail = 坚固的盖
+    #LOC_NFConstruction_switcher_endcap_solid_summary = 实心盖
+    #LOC_NFConstruction_switcher_endcap_none_detail = 无桁架盖
+    #LOC_NFConstruction_switcher_endcap_none_summary = 无盖
+
+
     #LOC_NFConstruction_switcher_angle_title = 角度
     #LOC_NFConstruction_switcher_angle_variant1 = 90度
     #LOC_NFConstruction_switcher_angle_variant2 = 45度
     #LOC_NFConstruction_switcher_angle_variant3 = 30度
+    #LOC_NFConstruction_switcher_angle_90_detail = 90度角转接头
+    #LOC_NFConstruction_switcher_angle_90_summary =
+    #LOC_NFConstruction_switcher_angle_45_detail = 45度角转接头
+    #LOC_NFConstruction_switcher_angle_45_summary =
+    #LOC_NFConstruction_switcher_angle_30_detail = 30度角转接头
+    #LOC_NFConstruction_switcher_angle_30_summary =
 
     #LOC_NFConstruction_switcher_attach_title = 子类型
     #LOC_NFConstruction_switcher_attach_variant1 = 直角
     #LOC_NFConstruction_switcher_attach_variant2 = 直角空心
     #LOC_NFConstruction_switcher_attach_variant3 = 正交
     #LOC_NFConstruction_switcher_attach_variant4 = 正交空心
+    #LOC_NFConstruction_switcher_attach_angled_detail = 此转接器设计为连接到octo桁架的斜侧的
+    #LOC_NFConstruction_switcher_attach_angled_summary = 角形转接器
+    #LOC_NFConstruction_switcher_attach_angled_hollow_detail = 此转接器设计为连接到octo桁架的斜侧，且中心为空
+    #LOC_NFConstruction_switcher_attach_angled_hollow_summary = 角形转接器（空心）
+    #LOC_NFConstruction_switcher_attach_ortho_detail = 此转接器设计为附加到octo桁架的基数节点
+    #LOC_NFConstruction_switcher_attach_ortho_summary = 直角转接器
+    #LOC_NFConstruction_switcher_attach_ortho_hollow_detail = 此连接器配置为附加到octo桁架的基本节点，且中心为空
+    #LOC_NFConstruction_switcher_attach_ortho_hollow_summary = 直角转接器（空心）
 
     #LOC_NFConstruction_switcher_docking_title = 中心
     #LOC_NFConstruction_switcher_docking_variant1 = 空
     #LOC_NFConstruction_switcher_docking_variant2 = 舱口
+    #LOC_NFConstruction_switcher_docking_hatch_detail = 中央有一个船员舱门
+    #LOC_NFConstruction_switcher_docking_hatch_summary = 船员舱口
+    #LOC_NFConstruction_switcher_docking_hollow_detail = 中心有一个空孔
+    #LOC_NFConstruction_switcher_docking_hollow_summary = 基本
 
     #LOC_NFConstruction_switcher_multiadapter_title = 节点
     #LOC_NFConstruction_switcher_multiadapter_variant1 = 贰
     #LOC_NFConstruction_switcher_multiadapter_variant2 = 四
     #LOC_NFConstruction_switcher_multiadapter_variant3 = 六
     #LOC_NFConstruction_switcher_multiadapter_variant4 = 八
+
+    #LOC_NFConstruction_switcher_multiadapter_8_detail =
+    #LOC_NFConstruction_switcher_multiadapter_8_summary = 8个0.625m接口
+    #LOC_NFConstruction_switcher_multiadapter_6_detail =
+    #LOC_NFConstruction_switcher_multiadapter_6_summary =6个0.625m接口
+    #LOC_NFConstruction_switcher_multiadapter_4_detail =
+    #LOC_NFConstruction_switcher_multiadapter_4_summary = 4个0.625m接口
+    #LOC_NFConstruction_switcher_multiadapter_2_detail =
+    #LOC_NFConstruction_switcher_multiadapter_2_summary = 2个0.625m接口
+
+    #LOC_NFConstruction_switcher_endcaps_name = 底盖
+    #LOC_NFConstruction_switcher_endcaps_black = 经典(裸露)
+    #LOC_NFConstruction_switcher_endcaps_black_handles = 经典
+    #LOC_NFConstruction_switcher_endcaps_white = 隔热(裸露)
+    #LOC_NFConstruction_switcher_endcaps_white_handles = 隔热
+
+    #LOC_NFConstruction_switcher_endcaps_black_detail =
+    #LOC_NFConstruction_switcher_endcaps_black_summary =
+    #LOC_NFConstruction_switcher_endcaps_black_handles_detail =
+    #LOC_NFConstruction_switcher_endcaps_black_handles_summary =
+    #LOC_NFConstruction_switcher_endcaps_white_detail =
+    #LOC_NFConstruction_switcher_endcaps_white_summary =
+    #LOC_NFConstruction_switcher_endcaps_white_handles_detail =
+    #LOC_NFConstruction_switcher_endcaps_white_handles_summary =
 
     // PARTS
     // Hex Girder
@@ -115,7 +215,6 @@ Localization
     #LOC_NFConstruction_truss-octo-angled-1_tags = connect frame scaffold structur strut truss nearfuture attach radial octo
     #LOC_NFConstruction_truss-octo-angled-crew-1_title = 八棱密封舱转角连接器
     #LOC_NFConstruction_truss-octo-angled-crew-1_description = 一个专用的八棱转角，提供90度、45度和30度的转接角度。这个组件是密封的可供船员通行。
-
     #LOC_NFConstruction_truss-octo-angled-crew-1_tags = connect frame scaffold structur strut truss nearfuture radial octo crew attach  pres tube can
     #LOC_NFConstruction_truss-octo-hub-1_title = 八棱中枢模块
     #LOC_NFConstruction_truss-octo-hub-1_description = 这个大型枢纽结构将附件的连接范围扩展到6个。
@@ -162,7 +261,6 @@ Localization
     #LOC_NFConstruction_truss-circular-01_tags = connect frame scaffold structur strut truss saddle hollow circle nearfuture annul
     #LOC_NFConstruction_truss-circular-02_title = 环形模块桁架
     #LOC_NFConstruction_truss-circular-02_description = 一个中型但是仍然适合各种轨道建筑的桁架。包含多种结构变体，提供无限乐趣。
-
     #LOC_NFConstruction_truss-circular-02_tags = connect frame scaffold structur strut truss saddle hollow circle nearfuture annul
     #LOC_NFConstruction_truss-circular-03_title = 环形模块桁架迷你版
     #LOC_NFConstruction_truss-circular-03_description = 一个短而不小的环形桁架。包含多种结构变体，提供无限乐趣。
@@ -179,6 +277,21 @@ Localization
     #LOC_NFConstruction_truss-circular-docking-01_title = 环形桁架对接连接器
     #LOC_NFConstruction_truss-circular-docking-01_description = 高强度大尺寸的对接连接器。中空!
     #LOC_NFConstruction_truss-circular-docking-01_tags = connect frame scaffold structur strut truss nearfuture annul berth capture connect couple dock fasten join moor socket hollow
+    
+    // Micro Truss
+    #LOC_NFConstruction_truss-micro-01_title = Cubic-Family大型衔架
+    #LOC_NFConstruction_truss-micro-01_description = Cubic-Family中的大型衔架，有正方形、三角形或平面轮廓供你选择
+    #LOC_NFConstruction_truss-micro-01_tags = connect frame scaffold structur girder strut truss plan tri squa cub nearfuture
+    #LOC_NFConstruction_truss-micro-02_title = Cubic-Family中型衔架
+    #LOC_NFConstruction_truss-micro-02_description =Cubic-Family中的中等衔架，有正方形、三角形或平面轮廓的供你选择
+    #LOC_NFConstruction_truss-micro-02_tags = connect frame scaffold structur girder strut truss plan tri squa cub nearfuture
+    #LOC_NFConstruction_truss-micro-03_title = Cubic-Family 衔架
+    #LOC_NFConstruction_truss-micro-03_description = 现在，随着技术的进步，StrutCo为您带来了Cubic-Family支柱-它就像一个规则的立方体八角形支柱，但在一个立方体的形状！也有三角形和平面变体。
+    #LOC_NFConstruction_truss-micro-03_tags = connect frame scaffold structur girder strut truss plan tri squa cub nearfuture
+
+    #LOC_NFConstruction_truss-micro-adapter-01_title = Cubic-Family 支柱转接器
+    #LOC_NFConstruction_truss-micro-adapter-01_description = 适用于标米底座准的0.625，具有吸引力的三角形或方形Cubic-Family支柱
+    #LOC_NFConstruction_truss-micro-adapter-01_tags = connect frame scaffold girder structur adapt strut truss tri squa cub nearfuture
 
     // adapters
     #LOC_NFConstruction_adapter-25-125_title = 极限火箭骨架型适配器
@@ -187,6 +300,10 @@ Localization
     #LOC_NFConstruction_adapter-25-multi-1_title = SE-4-OMNI 堆叠式多路适配器
     #LOC_NFConstruction_adapter-25-multi-1_description = 这个开创性的模块允许一个2.5米端口转接到2至8个0.625米接口。开箱有惊喜。
     #LOC_NFConstruction_adapter-25-multi-1_tags = connect frame scaffold structur strut truss nearfuture adapter stack multi two four six eight ?2 ?4 ?6 ?8
+    
+    #LOC_NFConstruction_adapter-125-0625-1_title = SM-1 转接器
+    #LOC_NFConstruction_adapter-125-0625-1_description = 将一个1.25米接口转为2个0.625米接口.
+    #LOC_NFConstruction_adapter-125-0625-1_tags = connect frame scaffold structur strut truss nearfuture adapter stack multi single ?1
     #LOC_NFConstruction_adapter-125-0625-2_title = SM-2 双路转接器
     #LOC_NFConstruction_adapter-125-0625-2_description = 将一个1.25米接口转为2个0.625米接口，适用于各类小型引擎。
     #LOC_NFConstruction_adapter-125-0625-2_tags = connect frame scaffold structur strut truss nearfuture adapter stack multi dual ?2
@@ -199,7 +316,9 @@ Localization
     #LOC_NFConstruction_adapter-375-25-1_title = 极限火箭骨架型适配器XL
     #LOC_NFConstruction_adapter-375-25-1_description = 极限火箭第一次匆忙地试图进入由坎巴拉动力主导的巨大型组件市场并收获了有限的掌声。
     #LOC_NFConstruction_adapter-375-25-1_tags = connect frame scaffold structur strut truss nearfuture
-
+    #LOC_NFConstruction_adapter-375-25-2_title = Kerbodine骨架结构适配器
+    #LOC_NFConstruction_adapter-375-25-2_description =
+    #LOC_NFConstruction_adapter-375-25-2_tags = connect frame scaffold adapt structur strut truss nearfuture
 
     #LOC_NFConstruction_adapter-rad-0625_title = S-MINI 径向转接适配器
     #LOC_NFConstruction_adapter-rad-0625_description = 一个很小的径向连接适配器。现在我们不需要用装满爆炸性燃料的油罐来完成这个任务了。这是一个双赢的局面！
@@ -207,6 +326,15 @@ Localization
     #LOC_NFConstruction_adapter-rad-125_title =  S-MED 径向转接适配器
     #LOC_NFConstruction_adapter-rad-125_description = 一个匹配1.25米接口的径向适配器。研究表明这使火箭的建造效率提高了16.2%。
     #LOC_NFConstruction_adapter-rad-125_tags = connect frame scaffold structur strut truss nearfuture radial
+    
+    //docking
+    #LOC_NFConstruction_docking-linear-1_title = Grip-O-Tron 线性对接口
+    #LOC_NFConstruction_docking-linear-1_description =grip系列对接连接器提供可重复使用的线性对接解决方案，为挑剔的关心轨道组装效率的客户提供服务。
+    #LOC_NFConstruction_docking-linear-1_tags = connect nearfuture berth capture connect couple dock fasten join moor socket line
 
+    #LOC_NFConstruction_docking-linear-2_title = Grip-O-Tron XL线性对接口
+    #LOC_NFConstruction_docking-linear-2_description = Grip-O-Tron的大模型为线性轨道装配提供了一个可靠的连接。太空旅行后保修失效。
+    #LOC_NFConstruction_docking-linear-2_tags = connect nearfuture berth capture connect couple dock fasten join moor socket line
+  
   }
 }
