unexpected token on line 35/36 (depending of the file). (fix) Added comments based on documentation from https://wiki.kerbalspaceprogram.com/wiki/CFG_File_Documentation

--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-2.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-2.cfg
@@ -32,7 +32,7 @@ PART {
 	manufacturer = #autoLOC_501629 // #autoLOC_501629 = O.M.B. Demolition Enterprises
 	description = #LOC_NFConstruction_adapter-125-0625-2_description
 
-	allowSrfAttach, allowCollision
+	// stack, ¬srfAttach, allowStack, allowSrfAttach, ¬allowCollision
 	attachRules = 1,0,1,1,0
 	stackSymmetry = 1
 
