--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-adapter-01.cfg
@@ -45,5 +45,9 @@ PART
 	thermalMassModifier = 0.4 // I am hollow
 
 	tags = #LOC_NFConstruction_truss-hex-adapter-01_tags
-
+  MODULE
+  {
+    name = ModuleCargoPart
+    packedVolume = -1
+  }
 }
