--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
@@ -121,5 +121,9 @@ PART
       descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
 		}
 	}
-
+  MODULE
+  {
+    name = ModuleCargoPart
+    packedVolume = -1
+  }
 }
