--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-01.cfg
@@ -46,5 +46,9 @@ PART
 
 	tags = #LOC_NFConstruction_truss-octo-adapter-1_tags
 
-
+  MODULE
+  {
+    name = ModuleCargoPart
+    packedVolume = -1
+  }
 }
