--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-01.cfg
@@ -85,4 +85,9 @@ PART
       descriptionDetail = #LOC_NFConstruction_switcher_angle_30_detail
 		}
 	}
+    MODULE
+  {
+    name = ModuleCargoPart
+    packedVolume = -1
+  }
 }
