--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
@@ -19,7 +19,7 @@ PART
 	node_stack_top02 = 0.0, 0.899, 0.4018, 0.0, 0.5, 0.5, 2
 	node_stack_top03 = 0.0, 0.665, 0.197, 0.0, 0.86602540378, 0.5, 2
 	node_stack_bottom = 0.0, -0.07155213, 0.0, 0.0, -1.0, 0.0, 2
-	ode_attach = 0.0, -0.07155213, 0.0, 0.0, -1.0, 0.0, 2
+	node_attach = 0.0, -0.07155213, 0.0, 0.0, -1.0, 0.0, 2
 
 	bulkheadProfiles = octotruss, srf
 
@@ -121,4 +121,9 @@ PART
       descriptionDetail = #LOC_NFConstruction_switcher_angle_30_detail
 		}
 	}
+    MODULE
+  {
+    name = ModuleCargoPart
+    packedVolume = -1
+  }
 }
