--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-drone-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-drone-01.cfg
@@ -127,4 +127,9 @@ PART
 		canBeTransferredToInVessel = True
 		canTransferInVessel = True
 	}
+  MODULE
+  {
+    name = ModuleCargoPart
+    packedVolume = -1
+  }
 }
