Fix cargo in 1.10

--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-1.cfg
@@ -4,7 +4,7 @@ PART {
 
 	name = adapter-25-multi-1
 	module = Part
-	author = Chris Adderley
+	author = Chris Adderley (Nertea)
 
 	//mesh = adapter-largeto5.mu
 	MODEL
