--- a/GameData/NearFutureConstruction/Patches/NFConstructionStockPartReplacements.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionStockPartReplacements.cfg
@@ -3,7 +3,7 @@
 // Cubic strut
 @PART[strutCube]:FOR[zzzzNFConstruction]
 {
-	@author = Chris Adderley
+	@author = Chris Adderley (Nertea)
 	@title = #LOC_NFConstruction_truss-micro-03_title
 	@description = #LOC_NFConstruction_truss-micro-03_description
 	@tags = #LOC_NFConstruction_truss-micro-03_tags
