--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-0625.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-0625.cfg
@@ -4,7 +4,7 @@ PART
 {
 	name = adapter-rad-0625
 	module = Part
-	author = Chris Adderley
+	author = Chris Adderley (Nertea)
 
 	//mesh = adapter-radialmini.mu
 	scale = 1
