--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-02.cfg
@@ -4,7 +4,7 @@ PART
 {
 	name = truss-circular-adapter-02
 	module = Part
-	author = Chris Adderley
+	author = Chris Adderley (Nertea)
 
 	MODEL
 	{
