--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
@@ -4,7 +4,7 @@ PART
 {
 	name = truss-octo-angled-crew-01
 	module = Part
-	author = Chris Adderley
+	author = Chris Adderley (Nertea)
 
 	MODEL
 	{
