Update of updated updates

--- a/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
@@ -3,72 +3,72 @@
 // Octo-truss XL
 @PART[truss-octo-01]:NEEDS[CommunityResourcePack]:FOR[NearFutureConstruction]
 {
-  !MODULE[ModuleB9DisableTransform] {}
+	!MODULE[ModuleB9DisableTransform] {}
 
-  @MODULE[ModuleB9PartSwitch]
-  {
-    %SUBTYPE[LH2OCryo]
-    {
-      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2O
-      tankType = LH2OCryo
-      transform = OctoLargeBare
-      transform = COLLISION15
-      transform = LH2OXTankLarge
-	     transform = LH2OXTankLargeFoil
-      addedCost = 2696
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail
-    }
-    %SUBTYPE[LH2Cryo]
-    {
-      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2
-      tankType = LH2Cryo
-      transform = OctoLargeBare
-      transform = COLLISION15
-      transform = LH2TankLarge
-      addedCost = 2696
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2_detail
-    }
-    %SUBTYPE[Lithium]
-    {
-      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_Li
-      tankType = Lithium
-      transform = OctoLargeBare
-      transform = COLLISION15
-      transform = LithiumTankLarge
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Li_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Li_detail
-    }
-    %SUBTYPE[Argon]
-    {
-      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_Ar
-      tankType = Argon
-      transform = OctoLargeBare
-      transform = COLLISION15
-      transform = ArgonTankLarge
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ar_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ar_detail
-    }
-  }
+	@MODULE[ModuleB9PartSwitch]
+	{
+		%SUBTYPE[LH2OCryo]
+		{
+			title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2O
+			tankType = LH2OCryo
+			transform = OctoLargeBare
+			transform = COLLISION15
+			transform = LH2OXTankLarge
+			 transform = LH2OXTankLargeFoil
+			addedCost = 2696
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail
+		}
+		%SUBTYPE[LH2Cryo]
+		{
+			title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2
+			tankType = LH2Cryo
+			transform = OctoLargeBare
+			transform = COLLISION15
+			transform = LH2TankLarge
+			addedCost = 2696
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2_detail
+		}
+		%SUBTYPE[Lithium]
+		{
+			title = #LOC_NFConstruction_switcher_subtype_variant_fuel_Li
+			tankType = Lithium
+			transform = OctoLargeBare
+			transform = COLLISION15
+			transform = LithiumTankLarge
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Li_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Li_detail
+		}
+		%SUBTYPE[Argon]
+		{
+			title = #LOC_NFConstruction_switcher_subtype_variant_fuel_Ar
+			tankType = Argon
+			transform = OctoLargeBare
+			transform = COLLISION15
+			transform = ArgonTankLarge
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ar_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ar_detail
+		}
+	}
 }
 
 @PART[truss-octo-01]:NEEDS[CommunityResourcePack&CryoTanks]
 {
-  MODULE
+	MODULE
 	{
 		name =  ModuleCryoTank
 		CoolingEnabled = True
-    BOILOFFCONFIG
-    {
-      FuelName = LqdHydrogen
-      // in % per hr
-      BoiloffRate = 0.05
-    }
+		BOILOFFCONFIG
+		{
+			FuelName = LqdHydrogen
+			// in % per hr
+			BoiloffRate = 0.05
+		}
 		// in Ec per 1000 units per second
 		CoolingCost = 0.08
 	}
@@ -77,211 +77,62 @@
 // Octo-truss
 @PART[truss-octo-02]:NEEDS[CommunityResourcePack]:FOR[NearFutureConstruction]
 {
-  !MODULE[ModuleB9DisableTransform] {}
-  @MODULE[ModuleB9PartSwitch]
-  {
-    %SUBTYPE[LH2OCryo]
-    {
-      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2O
-      tankType = LH2OCryo
-      transform = OctoMedBare
-      transform = COLLISION14
-	  transform = LH2OXTankMedFoil
-      transform = LH2OXTankMed
-      addedCost = 1348
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail
-    }
-    %SUBTYPE[LH2Cryo]
-    {
-      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2
-      tankType = LH2Cryo
-      transform = OctoMedBare
-      transform = COLLISION14
-      transform = LH2TankMed
-      addedCost = 1348
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2_detail
-    }
-    %SUBTYPE[Lithium]
-    {
-      title =#LOC_NFConstruction_switcher_subtype_variant_fuel_Li
-      tankType = Lithium
-      transform = OctoMedBare
-      transform = COLLISION14
-      transform = LithiumTankMed
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Li_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Li_detail
-    }
-    %SUBTYPE[Argon]
-    {
-      title =  #LOC_NFConstruction_switcher_subtype_variant_fuel_Ar
-      tankType = Argon
-      transform = OctoMedBare
-      transform = COLLISION14
-      transform = ArgonTankMed
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ar_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ar_detail
-    }
-  }
+	!MODULE[ModuleB9DisableTransform] {}
+	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[tankSwitch]] 
+	{
+		%SUBTYPE[LH2OCryo]
+		{
+			title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2O
+			tankType = LH2OCryo
+			transform = OctoMedBare
+			transform = COLLISION14
+		transform = LH2OXTankMedFoil
+			transform = LH2OXTankMed
+			addedCost = 1348
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail
+		}
+		%SUBTYPE[LH2Cryo]
+		{
+			title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2
+			tankType = LH2Cryo
+			transform = OctoMedBare
+			transform = COLLISION14
+			transform = LH2TankMed
+			addedCost = 1348
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2_detail
+		}
+		%SUBTYPE[Lithium]
+		{
+			title =#LOC_NFConstruction_switcher_subtype_variant_fuel_Li
+			tankType = Lithium
+			transform = OctoMedBare
+			transform = COLLISION14
+			transform = LithiumTankMed
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Li_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Li_detail
+		}
+		%SUBTYPE[Argon]
+		{
+			title =  #LOC_NFConstruction_switcher_subtype_variant_fuel_Ar
+			tankType = Argon
+			transform = OctoMedBare
+			transform = COLLISION14
+			transform = ArgonTankMed
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ar_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ar_detail
+		}
+	}
 }
 
 @PART[truss-octo-02]:NEEDS[CommunityResourcePack&CryoTanks]
 {
-  MODULE
-  {
-    name =  ModuleCryoTank
-    // in Ec per 1000 units per second
-    CoolingCost = 0.05
-    CoolingEnabled = True
-    BOILOFFCONFIG
-    {
-      FuelName = LqdHydrogen
-      // in % per hr
-      BoiloffRate = 0.05
-    }
-  }
-}
-
-// Hex Truss XL
-@PART[truss-hex-01]:NEEDS[CommunityResourcePack]:FOR[NearFutureConstruction]
-{
-  !MODULE[ModuleB9DisableTransform] {}
-  @MODULE[ModuleB9PartSwitch]
-  {
-    %SUBTYPE[LH2OCryo]
-    {
-      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2O
-      tankType = LH2OCryo
-      transform = HexLH2OTankLrg
-	     transform = HexLH2OTankLrgFoil
-			transform = LargeTruss
-			transform = COLLIDERLRG
-      addedCost = 1348
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail
-    }
-    %SUBTYPE[LH2Cryo]
-    {
-      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2
-      tankType = LH2Cryo
-      transform = HexLH2TankLrg
-			transform = LargeTruss
-			transform = COLLIDERLRG
-      addedCost = 1348
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2_detail
-    }
-    %SUBTYPE[Lithium]
-    {
-      title =#LOC_NFConstruction_switcher_subtype_variant_fuel_Li
-      tankType = Lithium
-      transform = HexLiTankLrg
-	     transform = LargeTruss
-	      transform = COLLIDERLRG
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Li_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Li_detail
-    }
-    %SUBTYPE[Argon]
-    {
-      title =  #LOC_NFConstruction_switcher_subtype_variant_fuel_Ar
-      tankType = Argon
-      transform = HexArTankLrg
-			transform = LargeTruss
-			transform = COLLIDERLRG
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ar_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ar_detail
-    }
-  }
-}
-
-@PART[truss-hex-01]:NEEDS[CommunityResourcePack&CryoTanks]
-{
-
-  MODULE
-  {
-    name =  ModuleCryoTank
-    CoolingEnabled = True
-    BOILOFFCONFIG
-    {
-      FuelName = LqdHydrogen
-      // in % per hr
-      BoiloffRate = 0.05
-    }
-    // in Ec per 1000 units per second
-    CoolingCost = 0.08
-  }
-}
-
-// Hex Truss
-@PART[truss-hex-02]:NEEDS[CommunityResourcePack]:FOR[NearFutureConstruction]
-{
-  !MODULE[ModuleB9DisableTransform] {}
-  @MODULE[ModuleB9PartSwitch]
-  {
-    %SUBTYPE[LH2OCryo]
-    {
-      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2O
-      tankType = LH2OCryo
-      transform = HexLH2OTankMed
-			transform = MediumTruss
-			transform = HexLH2OTankMedFoil
-
-			transform = COLLIDERMED
-      addedCost = 1348
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail
-    }
-    %SUBTYPE[LH2Cryo]
-    {
-      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2
-      tankType = LH2Cryo
-      transform = HexLH2TankMed
-			transform = MediumTruss
-			transform = COLLIDERMED
-      addedCost = 1348
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2_detail
-    }
-    %SUBTYPE[Lithium]
-    {
-      title =#LOC_NFConstruction_switcher_subtype_variant_fuel_Li
-      tankType = Lithium
-      transform = HexLiTankMed
-			transform = MediumTruss
-			transform = COLLIDERMED
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Li_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Li_detail
-
-    }
-    %SUBTYPE[Argon]
-    {
-      title =  #LOC_NFConstruction_switcher_subtype_variant_fuel_Ar
-      tankType = Argon
-      transform =  HexArTankMed
-			transform = MediumTruss
-			transform = COLLIDERMED
-      crashTolerance = 50
-      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ar_summary
-      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ar_detail
-    }
-  }
-}
-
-@PART[truss-hex-02]:NEEDS[CommunityResourcePack&CryoTanks]
-{
-  MODULE
+	MODULE
 	{
 		name =  ModuleCryoTank
 		// in Ec per 1000 units per second
@@ -293,5 +144,154 @@
 			// in % per hr
 			BoiloffRate = 0.05
 		}
-  }
+	}
+}
+
+// Hex Truss XL
+@PART[truss-hex-01]:NEEDS[CommunityResourcePack]:FOR[NearFutureConstruction]
+{
+	!MODULE[ModuleB9DisableTransform] {}
+	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[tankSwitch]] 
+	{
+		%SUBTYPE[LH2OCryo]
+		{
+			title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2O
+			tankType = LH2OCryo
+			transform = HexLH2OTankLrg
+			 transform = HexLH2OTankLrgFoil
+			transform = LargeTruss
+			transform = COLLIDERLRG
+			addedCost = 1348
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail
+		}
+		%SUBTYPE[LH2Cryo]
+		{
+			title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2
+			tankType = LH2Cryo
+			transform = HexLH2TankLrg
+			transform = LargeTruss
+			transform = COLLIDERLRG
+			addedCost = 1348
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2_detail
+		}
+		%SUBTYPE[Lithium]
+		{
+			title =#LOC_NFConstruction_switcher_subtype_variant_fuel_Li
+			tankType = Lithium
+			transform = HexLiTankLrg
+			 transform = LargeTruss
+				transform = COLLIDERLRG
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Li_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Li_detail
+		}
+		%SUBTYPE[Argon]
+		{
+			title =  #LOC_NFConstruction_switcher_subtype_variant_fuel_Ar
+			tankType = Argon
+			transform = HexArTankLrg
+			transform = LargeTruss
+			transform = COLLIDERLRG
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ar_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ar_detail
+		}
+	}
+}
+
+@PART[truss-hex-01]:NEEDS[CommunityResourcePack&CryoTanks]
+{
+
+	MODULE
+	{
+		name =  ModuleCryoTank
+		CoolingEnabled = True
+		BOILOFFCONFIG
+		{
+			FuelName = LqdHydrogen
+			// in % per hr
+			BoiloffRate = 0.05
+		}
+		// in Ec per 1000 units per second
+		CoolingCost = 0.08
+	}
+}
+
+// Hex Truss
+@PART[truss-hex-02]:NEEDS[CommunityResourcePack]:FOR[NearFutureConstruction]
+{
+	!MODULE[ModuleB9DisableTransform] {}
+	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[tankSwitch]] 
+	{
+		%SUBTYPE[LH2OCryo]
+		{
+			title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2O
+			tankType = LH2OCryo
+			transform = HexLH2OTankMed
+			transform = MediumTruss
+			transform = HexLH2OTankMedFoil
+
+			transform = COLLIDERMED
+			addedCost = 1348
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail
+		}
+		%SUBTYPE[LH2Cryo]
+		{
+			title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2
+			tankType = LH2Cryo
+			transform = HexLH2TankMed
+			transform = MediumTruss
+			transform = COLLIDERMED
+			addedCost = 1348
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2_detail
+		}
+		%SUBTYPE[Lithium]
+		{
+			title =#LOC_NFConstruction_switcher_subtype_variant_fuel_Li
+			tankType = Lithium
+			transform = HexLiTankMed
+			transform = MediumTruss
+			transform = COLLIDERMED
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Li_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Li_detail
+
+		}
+		%SUBTYPE[Argon]
+		{
+			title =  #LOC_NFConstruction_switcher_subtype_variant_fuel_Ar
+			tankType = Argon
+			transform =  HexArTankMed
+			transform = MediumTruss
+			transform = COLLIDERMED
+			crashTolerance = 50
+			descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ar_summary
+			descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ar_detail
+		}
+	}
+}
+
+@PART[truss-hex-02]:NEEDS[CommunityResourcePack&CryoTanks]
+{
+	MODULE
+	{
+		name =  ModuleCryoTank
+		// in Ec per 1000 units per second
+		CoolingCost = 0.05
+		CoolingEnabled = True
+		BOILOFFCONFIG
+		{
+			FuelName = LqdHydrogen
+			// in % per hr
+			BoiloffRate = 0.05
+		}
+	}
 }
